--- a/[2] dataloading_example.ipynb
+++ b/[2] dataloading_example.ipynb
@@ -164,6 +164,8 @@
     "            REFLACXWithClinicalAndBoundingBoxDataset.relabel_ellipse_df(pd.read_csv(e_path) for e_path in data[\"anomaly_location_ellipses_path\"])\n",
     "        ]\n",
     "\n",
+    "\n",
+    "        ## We don't need lables for image, only need the label for each bounding boxes. And, we should have label for background classes.\n",
     "        label_long_tensor = torch.tensor(np.array(data[self.labels_cols])).long()\n",
     "\n",
     "        clinical_numerical_input = torch.tensor(\n",
