--- a/[1] reflacx_dataset_preprocessing.ipynb
+++ b/[1] reflacx_dataset_preprocessing.ipynb
@@ -26,7 +26,9 @@
     "import pandas as pd\n",
     "\n",
     "from data.paths import TabularDataPaths\n",
-    "from utils import print as print_f"
+    "\n",
+    "from utils import print as print_f\n",
+    "from utils.preprocessing import get_split_list"
    ]
   },
   {
@@ -598,7 +600,6 @@
     "    \"subject_id\",\n",
     "    \"stay_id\",\n",
     "    \"study_id\",\n",
-    "    \"split\",\n",
     "    # image meta\n",
     "    \"image_path\",\n",
     "    \"ViewPosition\",\n",
@@ -675,8 +676,303 @@
     "        for col in merged_df.columns\n",
     "        if merged_df[col].isna().any()\n",
     "    ]\n",
-    ")\n",
-    "\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filling NaN value by mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filling missing value for temperature\n",
+      "filling missing value for heartrate\n",
+      "filling missing value for resprate\n",
+      "filling missing value for o2sat\n",
+      "filling missing value for sbp\n",
+      "filling missing value for dbp\n",
+      "filling missing value for pain\n",
+      "filling missing value for acuity\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filling the nan value by mean\n",
+    "\n",
+    "for col in merged_df.columns:\n",
+    "    if merged_df[col].isna().any():\n",
+    "        print(f\"filling missing value for {col}\")\n",
+    "        merged_df[col] = merged_df[col].fillna(round(merged_df[~merged_df[col].isna()][col].mean(), 1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split them into train, val and test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['split'] = get_split_list(len(merged_df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The end of the dataframe looks like this: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>dicom_id</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>stay_id</th>\n",
+       "      <th>study_id</th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>ViewPosition</th>\n",
+       "      <th>image_size_x</th>\n",
+       "      <th>image_size_y</th>\n",
+       "      <th>anomaly_location_ellipses_path</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Wide mediastinum</th>\n",
+       "      <th>Abnormal mediastinal contour</th>\n",
+       "      <th>Acute fracture</th>\n",
+       "      <th>Enlarged hilum</th>\n",
+       "      <th>Hiatal hernia</th>\n",
+       "      <th>High lung volume / emphysema</th>\n",
+       "      <th>Interstitial lung disease</th>\n",
+       "      <th>Lung nodule or mass</th>\n",
+       "      <th>Pleural abnormality</th>\n",
+       "      <th>split</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P102R108387</td>\n",
+       "      <td>34cedb74-d0996b40-6d218312-a9174bea-d48dc033</td>\n",
+       "      <td>18111516</td>\n",
+       "      <td>32067002</td>\n",
+       "      <td>55032240</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P102R379837</td>\n",
+       "      <td>34cedb74-d0996b40-6d218312-a9174bea-d48dc033</td>\n",
+       "      <td>18111516</td>\n",
+       "      <td>32067002</td>\n",
+       "      <td>55032240</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P102R558314</td>\n",
+       "      <td>34cedb74-d0996b40-6d218312-a9174bea-d48dc033</td>\n",
+       "      <td>18111516</td>\n",
+       "      <td>32067002</td>\n",
+       "      <td>55032240</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P102R765317</td>\n",
+       "      <td>34cedb74-d0996b40-6d218312-a9174bea-d48dc033</td>\n",
+       "      <td>18111516</td>\n",
+       "      <td>32067002</td>\n",
+       "      <td>55032240</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P102R915878</td>\n",
+       "      <td>34cedb74-d0996b40-6d218312-a9174bea-d48dc033</td>\n",
+       "      <td>18111516</td>\n",
+       "      <td>32067002</td>\n",
+       "      <td>55032240</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>2544</td>\n",
+       "      <td>3056</td>\n",
+       "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>train</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                                      dicom_id  subject_id  \\\n",
+       "0  P102R108387  34cedb74-d0996b40-6d218312-a9174bea-d48dc033    18111516   \n",
+       "1  P102R379837  34cedb74-d0996b40-6d218312-a9174bea-d48dc033    18111516   \n",
+       "2  P102R558314  34cedb74-d0996b40-6d218312-a9174bea-d48dc033    18111516   \n",
+       "3  P102R765317  34cedb74-d0996b40-6d218312-a9174bea-d48dc033    18111516   \n",
+       "4  P102R915878  34cedb74-d0996b40-6d218312-a9174bea-d48dc033    18111516   \n",
+       "\n",
+       "    stay_id  study_id                                         image_path  \\\n",
+       "0  32067002  55032240  {XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...   \n",
+       "1  32067002  55032240  {XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...   \n",
+       "2  32067002  55032240  {XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...   \n",
+       "3  32067002  55032240  {XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...   \n",
+       "4  32067002  55032240  {XAMI_MIMIC_PATH}\\patient_18111516\\CXR-JPG\\s55...   \n",
+       "\n",
+       "  ViewPosition  image_size_x  image_size_y  \\\n",
+       "0           AP          2544          3056   \n",
+       "1           AP          2544          3056   \n",
+       "2           AP          2544          3056   \n",
+       "3           AP          2544          3056   \n",
+       "4           AP          2544          3056   \n",
+       "\n",
+       "                      anomaly_location_ellipses_path  ...  Wide mediastinum  \\\n",
+       "0  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
+       "1  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
+       "2  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
+       "3  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               2.0   \n",
+       "4  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
+       "\n",
+       "  Abnormal mediastinal contour  Acute fracture  Enlarged hilum  Hiatal hernia  \\\n",
+       "0                          0.0             0.0             0.0            0.0   \n",
+       "1                          0.0             0.0             0.0            0.0   \n",
+       "2                          0.0             0.0             0.0            0.0   \n",
+       "3                          0.0             0.0             0.0            0.0   \n",
+       "4                          0.0             0.0             0.0            0.0   \n",
+       "\n",
+       "   High lung volume / emphysema  Interstitial lung disease  \\\n",
+       "0                           0.0                        0.0   \n",
+       "1                           0.0                        0.0   \n",
+       "2                           0.0                        0.0   \n",
+       "3                           0.0                        0.0   \n",
+       "4                           0.0                        0.0   \n",
+       "\n",
+       "   Lung nodule or mass  Pleural abnormality  split  \n",
+       "0                  0.0                  0.0  train  \n",
+       "1                  0.0                  0.0  train  \n",
+       "2                  0.0                  0.0  train  \n",
+       "3                  1.0                  0.0  train  \n",
+       "4                  0.0                  0.0  train  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.head(5)"
    ]
   },
   {
@@ -689,11 +985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv(\"reflacx_with_clinical.csv\")\n"
+    "merged_df.to_csv(\"reflacx_with_clinical.csv\")"
    ]
   }
  ],
