--- a/[4] model_arch_plot.ipynb
+++ b/[4] model_arch_plot.ipynb
@@ -265,7 +265,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "If you can't see this one on Discord, you can just right click it then click **Save Image**."
+   ]
   }
  ],
  "metadata": {
