--- a/[3] train.ipynb
+++ b/[3] train.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import torch\n",
+    "import pickle\n",
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "import utils.print as print_f\n",
     "\n",
     "from datetime import datetime\n",
     "from data.dataset import REFLACXWithClinicalAndBoundingBoxDataset\n",
+    "from collections import OrderedDict\n",
+    "\n",
     "from utils.transforms import get_transform\n",
     "from utils.engine import train_one_epoch, evaluate\n",
+    "from utils.save import  get_train_data\n",
     "\n",
     "## Suppress the assignement warning from pandas.\n",
     "pd.options.mode.chained_assignment = None  # default='warn'"
@@ -407,7 +414,6 @@
     "import torchvision\n",
     "from models.rcnn import MultimodalFasterRCNN\n",
     "\n",
-    "\n",
     "## Weights of the first 2 layer of the ResNet backbone are fixed.\n",
     "trainable_backbone_layers = torchvision.models.detection.backbone_utils._validate_trainable_layers(\n",
     "    True, None, 5, 3\n",
@@ -519,17 +525,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: [0]  [ 0/30]  eta: 0:03:37  lr: 0.000177  loss: 2.5034 (2.5034)  loss_classifier: 1.7914 (1.7914)  loss_box_reg: 0.0151 (0.0151)  loss_objectness: 0.6914 (0.6914)  loss_rpn_box_reg: 0.0055 (0.0055)  time: 7.2618  data: 2.1195  max mem: 7961\n",
-      "Epoch: [0]  [10/30]  eta: 0:01:15  lr: 0.001900  loss: 2.4714 (2.4179)  loss_classifier: 1.7563 (1.7070)  loss_box_reg: 0.0140 (0.0146)  loss_objectness: 0.6904 (0.6891)  loss_rpn_box_reg: 0.0059 (0.0073)  time: 3.7606  data: 2.1872  max mem: 8332\n",
-      "Epoch: [0]  [20/30]  eta: 0:00:35  lr: 0.003622  loss: 1.9266 (1.6785)  loss_classifier: 1.2390 (1.1237)  loss_box_reg: 0.0190 (0.0293)  loss_objectness: 0.6750 (0.5182)  loss_rpn_box_reg: 0.0065 (0.0073)  time: 3.3931  data: 2.1824  max mem: 8332\n",
-      "Epoch: [0]  [29/30]  eta: 0:00:03  lr: 0.005000  loss: 0.3984 (1.2568)  loss_classifier: 0.2016 (0.8275)  loss_box_reg: 0.0381 (0.0328)  loss_objectness: 0.1108 (0.3897)  loss_rpn_box_reg: 0.0064 (0.0068)  time: 3.2508  data: 2.0882  max mem: 8332\n",
-      "Epoch: [0] Total time: 0:01:43 (3.4358 s / it)\n",
+      "Epoch: [0]  [ 0/30]  eta: 0:07:14  lr: 0.000177  loss: 2.5088 (2.5088)  loss_classifier: 1.7768 (1.7768)  loss_box_reg: 0.0323 (0.0323)  loss_objectness: 0.6949 (0.6949)  loss_rpn_box_reg: 0.0049 (0.0049)  time: 14.4821  data: 2.4319  max mem: 7983\n",
+      "Epoch: [0]  [10/30]  eta: 0:01:45  lr: 0.001900  loss: 2.4572 (2.3755)  loss_classifier: 1.7351 (1.6559)  loss_box_reg: 0.0189 (0.0204)  loss_objectness: 0.6941 (0.6931)  loss_rpn_box_reg: 0.0049 (0.0061)  time: 5.2762  data: 2.8528  max mem: 8332\n",
+      "Epoch: [0]  [20/30]  eta: 0:00:48  lr: 0.003622  loss: 1.4088 (1.6134)  loss_classifier: 0.9676 (1.0540)  loss_box_reg: 0.0236 (0.0372)  loss_objectness: 0.6819 (0.5150)  loss_rpn_box_reg: 0.0057 (0.0073)  time: 4.3318  data: 2.8577  max mem: 8332\n",
+      "Epoch: [0]  [29/30]  eta: 0:00:04  lr: 0.005000  loss: 0.4526 (1.2065)  loss_classifier: 0.1822 (0.7761)  loss_box_reg: 0.0325 (0.0374)  loss_objectness: 0.1071 (0.3861)  loss_rpn_box_reg: 0.0061 (0.0069)  time: 4.0265  data: 2.6290  max mem: 8332\n",
+      "Epoch: [0] Total time: 0:02:14 (4.4895 s / it)\n",
       "creating index...\n",
       "index created!\n",
-      "Test:  [0/7]  eta: 0:00:19  model_time: 0.5137 (0.5137)  evaluator_time: 0.0244 (0.0244)  time: 2.7306  data: 1.9644  max mem: 8332\n",
-      "Test:  [6/7]  eta: 0:00:02  model_time: 0.4901 (0.4439)  evaluator_time: 0.0120 (0.0291)  time: 2.4975  data: 1.8174  max mem: 8332\n",
-      "Test: Total time: 0:00:17 (2.4977 s / it)\n",
-      "Averaged stats: model_time: 0.4901 (0.4439)  evaluator_time: 0.0120 (0.0291)\n",
+      "Test:  [0/7]  eta: 0:00:23  model_time: 0.6091 (0.6091)  evaluator_time: 0.0135 (0.0135)  time: 3.3076  data: 2.4226  max mem: 8332\n",
+      "Test:  [6/7]  eta: 0:00:03  model_time: 0.5972 (0.5322)  evaluator_time: 0.0075 (0.0082)  time: 3.1681  data: 2.3867  max mem: 8332\n",
+      "Test: Total time: 0:00:22 (3.1684 s / it)\n",
+      "Averaged stats: model_time: 0.5972 (0.5322)  evaluator_time: 0.0075 (0.0082)\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=0.03s).\n",
+      "IoU metric: bbox\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      "Epoch: [1]  [ 0/30]  eta: 0:02:07  lr: 0.005000  loss: 0.1863 (0.1863)  loss_classifier: 0.0906 (0.0906)  loss_box_reg: 0.0318 (0.0318)  loss_objectness: 0.0578 (0.0578)  loss_rpn_box_reg: 0.0061 (0.0061)  time: 4.2505  data: 2.5972  max mem: 8332\n",
+      "Epoch: [1]  [10/30]  eta: 0:01:22  lr: 0.005000  loss: 0.2145 (0.2073)  loss_classifier: 0.0951 (0.0929)  loss_box_reg: 0.0462 (0.0436)  loss_objectness: 0.0612 (0.0643)  loss_rpn_box_reg: 0.0056 (0.0065)  time: 4.1294  data: 2.6656  max mem: 8332\n",
+      "Epoch: [1]  [20/30]  eta: 0:00:41  lr: 0.005000  loss: 0.2331 (0.2259)  loss_classifier: 0.1007 (0.1010)  loss_box_reg: 0.0511 (0.0519)  loss_objectness: 0.0642 (0.0662)  loss_rpn_box_reg: 0.0062 (0.0067)  time: 4.1345  data: 2.6995  max mem: 8332\n",
+      "Epoch: [1]  [29/30]  eta: 0:00:04  lr: 0.005000  loss: 0.2356 (0.2301)  loss_classifier: 0.1073 (0.1040)  loss_box_reg: 0.0653 (0.0561)  loss_objectness: 0.0602 (0.0637)  loss_rpn_box_reg: 0.0067 (0.0063)  time: 4.0454  data: 2.6559  max mem: 8332\n",
+      "Epoch: [1] Total time: 0:02:02 (4.0761 s / it)\n",
+      "creating index...\n",
+      "index created!\n",
+      "Test:  [0/7]  eta: 0:00:22  model_time: 0.5646 (0.5646)  evaluator_time: 0.0123 (0.0123)  time: 3.2203  data: 2.3765  max mem: 8332\n",
+      "Test:  [6/7]  eta: 0:00:03  model_time: 0.5488 (0.5025)  evaluator_time: 0.0078 (0.0080)  time: 3.0384  data: 2.2835  max mem: 8332\n",
+      "Test: Total time: 0:00:21 (3.0386 s / it)\n",
+      "Averaged stats: model_time: 0.5488 (0.5025)  evaluator_time: 0.0078 (0.0080)\n",
       "Accumulating evaluation results...\n",
       "DONE (t=0.02s).\n",
       "IoU metric: bbox\n",
@@ -545,39 +577,13 @@
       " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
       " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
       " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
-      "Epoch: [1]  [ 0/30]  eta: 0:01:37  lr: 0.005000  loss: 0.2111 (0.2111)  loss_classifier: 0.0957 (0.0957)  loss_box_reg: 0.0515 (0.0515)  loss_objectness: 0.0596 (0.0596)  loss_rpn_box_reg: 0.0043 (0.0043)  time: 3.2458  data: 2.0115  max mem: 8332\n",
-      "Epoch: [1]  [10/30]  eta: 0:01:05  lr: 0.005000  loss: 0.2343 (0.2367)  loss_classifier: 0.0957 (0.1057)  loss_box_reg: 0.0474 (0.0534)  loss_objectness: 0.0661 (0.0700)  loss_rpn_box_reg: 0.0059 (0.0077)  time: 3.2888  data: 2.0628  max mem: 8332\n",
-      "Epoch: [1]  [20/30]  eta: 0:00:32  lr: 0.005000  loss: 0.2120 (0.2281)  loss_classifier: 0.0942 (0.1033)  loss_box_reg: 0.0449 (0.0532)  loss_objectness: 0.0624 (0.0652)  loss_rpn_box_reg: 0.0057 (0.0064)  time: 3.2805  data: 2.0536  max mem: 8332\n",
-      "Epoch: [1]  [29/30]  eta: 0:00:03  lr: 0.005000  loss: 0.2120 (0.2283)  loss_classifier: 0.0948 (0.1035)  loss_box_reg: 0.0474 (0.0553)  loss_objectness: 0.0543 (0.0632)  loss_rpn_box_reg: 0.0049 (0.0062)  time: 3.1635  data: 1.9845  max mem: 8332\n",
-      "Epoch: [1] Total time: 0:01:36 (3.2042 s / it)\n",
+      "====================| Training Done, start testing! | Training time: [333] seconds, Avg time / Epoch: [166.5] seconds====================\n",
       "creating index...\n",
       "index created!\n",
-      "Test:  [0/7]  eta: 0:00:18  model_time: 0.4551 (0.4551)  evaluator_time: 0.0210 (0.0210)  time: 2.6726  data: 1.9684  max mem: 8332\n",
-      "Test:  [6/7]  eta: 0:00:02  model_time: 0.4641 (0.4264)  evaluator_time: 0.0140 (0.0137)  time: 2.4438  data: 1.7977  max mem: 8332\n",
-      "Test: Total time: 0:00:17 (2.4441 s / it)\n",
-      "Averaged stats: model_time: 0.4641 (0.4264)  evaluator_time: 0.0140 (0.0137)\n",
-      "Accumulating evaluation results...\n",
-      "DONE (t=0.02s).\n",
-      "IoU metric: bbox\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
-      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
-      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
-      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
-      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
-      "====================| Training Done, start testing! | Training time: [260] seconds, Avg time / Epoch: [130.0] seconds====================\n",
-      "creating index...\n",
-      "index created!\n",
-      "Test:  [0/7]  eta: 0:00:19  model_time: 0.5191 (0.5191)  evaluator_time: 0.0100 (0.0100)  time: 2.7456  data: 1.9854  max mem: 8332\n",
-      "Test:  [6/7]  eta: 0:00:02  model_time: 0.4911 (0.4471)  evaluator_time: 0.0150 (0.0131)  time: 2.4934  data: 1.8240  max mem: 8332\n",
-      "Test: Total time: 0:00:17 (2.4936 s / it)\n",
-      "Averaged stats: model_time: 0.4911 (0.4471)  evaluator_time: 0.0150 (0.0131)\n",
+      "Test:  [0/7]  eta: 0:00:22  model_time: 0.5483 (0.5483)  evaluator_time: 0.0085 (0.0085)  time: 3.2698  data: 2.4539  max mem: 8332\n",
+      "Test:  [6/7]  eta: 0:00:02  model_time: 0.5013 (0.4540)  evaluator_time: 0.0079 (0.0072)  time: 2.7629  data: 2.0836  max mem: 8332\n",
+      "Test: Total time: 0:00:19 (2.7631 s / it)\n",
+      "Averaged stats: model_time: 0.5013 (0.4540)  evaluator_time: 0.0079 (0.0072)\n",
       "Accumulating evaluation results...\n",
       "DONE (t=0.02s).\n",
       "IoU metric: bbox\n",
@@ -597,7 +603,7 @@
     }
    ],
    "source": [
-    "num_epochs = 2\n",
+    "num_epochs = 200\n",
     "\n",
     "train_logers = []\n",
     "val_evaluators = []\n",
@@ -626,6 +632,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IoU metric: bbox\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = -1.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = -1.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_evaluator.summarize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot training data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_record = OrderedDict({\n",
+    "    \"train_data\": [ get_train_data(loger) for loger in train_logers],\n",
+    "    \"val_evaluators\" : val_evaluators,\n",
+    "    \"test_evaluator\": test_evaluator,\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "train_data_keys = training_record['train_data'][0].keys()\n",
+    "\n",
+    "fig, subplots  = plt.subplots(\n",
+    "    len(train_data_keys), figsize=(10, 5* len(train_data_keys)), dpi=80, sharex=True)\n",
+    "\n",
+    "\n",
+    "fig.suptitle(f\"Training Losses\")\n",
+    "\n",
+    "for i, k in enumerate(train_data_keys):\n",
+    "    subplots[i].set_title(k)\n",
+    "    subplots[i].plot([data[k] for data in training_record[\"train_data\"]], marker='o', label=k, color='steelblue')\n",
+    "    # subplots[i].legend(loc=\"upper left\")\n",
+    "\n",
+    "subplots[-1].set_xlabel('Epoch')\n",
+    "plt.plot()\n",
+    "plt.pause(0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save mode and training data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clinial_cond = \"With\" if model.use_clinical else \"Without\"\n",
+    "current_time_string = datetime.now().strftime(\"%m-%d-%Y %H-%M-%S\")\n",
+    "final_model_path =  f\"epoch{epoch}_{clinial_cond}Clincal_{current_time_string}\".replace(\":\", \"_\").replace(\".\", \"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), os.path.join(\n",
+    "    os.path.join('trained_models', final_model_path)\n",
+    "))\n",
+    "\n",
+    "print(f\"Model has been saved: {final_model_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\n",
+    "    os.path.join(\"train_hist\", f\"{final_model_path}.pkl\"), \"wb\",\n",
+    ") as training_record_f:\n",
+    "    pickle.dump(training_record, training_record_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # load testing.\n",
+    "# import pickle\n",
+    "# final_model_path = \"epoch199_WithClincal_03-07-2022 18-04-34\"\n",
+    "# with open(os.path.join(\"train_hist\", f\"{final_model_path}.pkl\"), 'rb') as f:\n",
+    "#     train_hist = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -637,7 +775,7 @@
    "hash": "7a402e4e4296f2d4bed1c089fb7c7e828933dcbfe50698b381e393c052eea855"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('pytorch')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -652,8 +790,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
