update folder naming.

--- a/[3] train.ipynb
+++ b/[3] train.ipynb
@@ -105,7 +105,6 @@
     "    transforms=get_transform(train=False),\n",
     ")\n",
     "\n",
-    "\n",
     "train_dataloader = torch.utils.data.DataLoader(\n",
     "    train_dataset, batch_size=batch_size, shuffle=True, collate_fn=REFLACXWithClinicalAndBoundingBoxDataset.collate_fn\n",
     ")\n",
@@ -744,7 +743,7 @@
    "outputs": [],
    "source": [
     "with open(\n",
-    "    os.path.join(\"train_hist\", f\"{final_model_path}.pkl\"), \"wb\",\n",
+    "    os.path.join(\"training_records\", f\"{final_model_path}.pkl\"), \"wb\",\n",
     ") as training_record_f:\n",
     "    pickle.dump(training_record, training_record_f)"
    ]
@@ -758,8 +757,8 @@
     "# # load testing.\n",
     "# import pickle\n",
     "# final_model_path = \"epoch199_WithClincal_03-07-2022 18-04-34\"\n",
-    "# with open(os.path.join(\"train_hist\", f\"{final_model_path}.pkl\"), 'rb') as f:\n",
-    "#     train_hist = pickle.load(f)"
+    "# with open(os.path.join(\"training_records\", f\"{final_model_path}.pkl\"), 'rb') as f:\n",
+    "#     training_record = pickle.load(f)"
    ]
   },
   {
