--- a/[3] train.ipynb
+++ b/[3] train.ipynb
@@ -662,7 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot training data."
+    "## Plot training Result."
    ]
   },
   {
