dealing with training problem.

--- a/[3] train.ipynb
+++ b/[3] train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -356,55 +356,10 @@
        "      (bbox_pred): Linear(in_features=1024, out_features=24, bias=True)\n",
        "    )\n",
        "  )\n",
-       "  (gender_emb_layer): Embedding(2, 23)\n",
-       "  (clinical_convs): ModuleDict(\n",
-       "    (pool): Sequential(\n",
-       "      (0): ConvTranspose2d(32, 256, kernel_size=(8, 8), stride=(1, 1))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (3): Sequential(\n",
-       "      (0): ConvTranspose2d(256, 256, kernel_size=(2, 2), stride=(2, 2))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (2): Sequential(\n",
-       "      (0): ConvTranspose2d(256, 256, kernel_size=(2, 2), stride=(2, 2))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (1): Sequential(\n",
-       "      (0): ConvTranspose2d(256, 256, kernel_size=(2, 2), stride=(2, 2))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (0): Sequential(\n",
-       "      (0): ConvTranspose2d(256, 256, kernel_size=(2, 2), stride=(2, 2))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "  )\n",
-       "  (fuse_convs): ModuleDict(\n",
-       "    (0): Sequential(\n",
-       "      (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (1): Sequential(\n",
-       "      (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (2): Sequential(\n",
-       "      (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (3): Sequential(\n",
-       "      (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "    (pool): Sequential(\n",
-       "      (0): Conv2d(512, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "      (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "    )\n",
-       "  )\n",
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +395,7 @@
     "    num_classes=len(train_dataset.labels_cols) + 1,\n",
     "    rpn_anchor_generator=None,\n",
     "    box_roi_pool=None,\n",
-    "    use_clinical=True, # Define whether we use clinical data in our model.\n",
+    "    use_clinical=False, # Define whether we use clinical data in our model.\n",
     ")\n",
     "\n",
     "# move model to the right device\n",
@@ -456,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model size: 54,694,171\n"
+      "Model size: 41,319,661\n"
      ]
     }
    ],
