--- a/[1] reflacx_dataset_preprocessing.ipynb
+++ b/[1] reflacx_dataset_preprocessing.ipynb
@@ -639,7 +639,7 @@
     "    \"Interstitial lung disease\",\n",
     "    \"Lung nodule or mass\",\n",
     "    \"Pleural abnormality\",\n",
-    "    #'Fracture' # don't have any positive case\n",
+    "    'Fracture' # don't have any positive case\n",
     "]\n",
     "\n",
     "merged_df = merged_df[needed_columns]\n"
@@ -775,7 +775,6 @@
        "      <th>image_size_y</th>\n",
        "      <th>anomaly_location_ellipses_path</th>\n",
        "      <th>...</th>\n",
-       "      <th>Wide mediastinum</th>\n",
        "      <th>Abnormal mediastinal contour</th>\n",
        "      <th>Acute fracture</th>\n",
        "      <th>Enlarged hilum</th>\n",
@@ -784,6 +783,7 @@
        "      <th>Interstitial lung disease</th>\n",
        "      <th>Lung nodule or mass</th>\n",
        "      <th>Pleural abnormality</th>\n",
+       "      <th>Fracture</th>\n",
        "      <th>split</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -873,7 +873,6 @@
        "      <td>3056</td>\n",
        "      <td>{XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...</td>\n",
        "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -881,6 +880,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
@@ -910,7 +910,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
+       "<p>5 rows × 42 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -935,19 +935,19 @@
        "3           AP          2544          3056   \n",
        "4           AP          2544          3056   \n",
        "\n",
-       "                      anomaly_location_ellipses_path  ...  Wide mediastinum  \\\n",
-       "0  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
-       "1  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
-       "2  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
-       "3  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               2.0   \n",
-       "4  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...               0.0   \n",
+       "                      anomaly_location_ellipses_path  ...  \\\n",
+       "0  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
+       "1  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
+       "2  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
+       "3  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
+       "4  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
        "\n",
-       "  Abnormal mediastinal contour  Acute fracture  Enlarged hilum  Hiatal hernia  \\\n",
-       "0                          0.0             0.0             0.0            0.0   \n",
-       "1                          0.0             0.0             0.0            0.0   \n",
-       "2                          0.0             0.0             0.0            0.0   \n",
-       "3                          0.0             0.0             0.0            0.0   \n",
-       "4                          0.0             0.0             0.0            0.0   \n",
+       "   Abnormal mediastinal contour Acute fracture  Enlarged hilum  Hiatal hernia  \\\n",
+       "0                           0.0            0.0             0.0            0.0   \n",
+       "1                           0.0            0.0             0.0            0.0   \n",
+       "2                           0.0            0.0             0.0            0.0   \n",
+       "3                           0.0            0.0             0.0            0.0   \n",
+       "4                           0.0            0.0             0.0            0.0   \n",
        "\n",
        "   High lung volume / emphysema  Interstitial lung disease  \\\n",
        "0                           0.0                        0.0   \n",
@@ -956,14 +956,14 @@
        "3                           0.0                        0.0   \n",
        "4                           0.0                        0.0   \n",
        "\n",
-       "   Lung nodule or mass  Pleural abnormality  split  \n",
-       "0                  0.0                  0.0  train  \n",
-       "1                  0.0                  0.0  train  \n",
-       "2                  0.0                  0.0  train  \n",
-       "3                  1.0                  0.0  train  \n",
-       "4                  0.0                  0.0  train  \n",
+       "   Lung nodule or mass  Pleural abnormality  Fracture  split  \n",
+       "0                  0.0                  0.0       0.0  train  \n",
+       "1                  0.0                  0.0       0.0  train  \n",
+       "2                  0.0                  0.0       0.0  train  \n",
+       "3                  1.0                  0.0       0.0  train  \n",
+       "4                  0.0                  0.0       0.0  train  \n",
        "\n",
-       "[5 rows x 41 columns]"
+       "[5 rows x 42 columns]"
       ]
      },
      "execution_count": 18,
@@ -976,6 +976,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('Fracture', 0.0),\n",
+       "             ('Quality issue', 3.0),\n",
+       "             ('Fibrosis', 4.0),\n",
+       "             ('Pneumothorax', 10.0),\n",
+       "             ('Wide mediastinum', 11.0),\n",
+       "             ('Airway wall thickening', 18.0),\n",
+       "             ('Acute fracture', 20.0),\n",
+       "             ('Hiatal hernia', 31.0),\n",
+       "             ('Interstitial lung disease', 39.0),\n",
+       "             ('Enlarged hilum', 49.0),\n",
+       "             ('Abnormal mediastinal contour', 86.0),\n",
+       "             ('High lung volume / emphysema', 89.0),\n",
+       "             ('Lung nodule or mass', 167.0),\n",
+       "             ('Support devices', 189.0),\n",
+       "             ('Groundglass opacity', 275.0),\n",
+       "             ('Pulmonary edema', 357.0),\n",
+       "             ('Consolidation', 501.0),\n",
+       "             ('Pleural abnormality', 583.0),\n",
+       "             ('Atelectasis', 634.0),\n",
+       "             ('Enlarged cardiac silhouette', 717.0)])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "count_map = dict(merged_df[labels_cols].sum(axis=0))\n",
+    "OrderedDict({k: v for k, v in sorted(count_map.items(), key=lambda item: item[1])})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -985,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
