--- a/[0] relfacx_cxr_preprocessing.ipynb
+++ b/[0] relfacx_cxr_preprocessing.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This is the file to generate training dataframe for the **FULL** REFLACX dataset.\n",
+    "\n",
+    "For More detail, have a look of `[1] reflacx_dataset_preprocessing.ipynb`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
