reset for training.

--- a/[3.b] continue_training.ipynb
+++ b/[3.b] continue_training.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -16,17 +15,19 @@
     "from utils.engine import xami_train_one_epoch, xami_evaluate\n",
     "from utils.plot import plot_loss, plot_train_val_evaluators, plot_evaluator\n",
     "from utils.save import get_train_data\n",
-    "\n",
-    "from models.load import ModelSetup, create_model_from_setup\n",
-    "from utils.save import check_best, end_train, TrainingInfo\n",
-    "from utils.data import get_datasets, get_dataloaders\n",
-    "from IPython.display import clear_output\n",
-    "from utils.coco_eval import get_ar_ap\n",
-    "from utils.init import reproducibility, clean_memory_get_device\n",
-    "from models.load import get_trained_model, get_current_epoch\n",
-    "from utils.train import get_optimiser\n",
-    "from utils.constants import XAMI_MIMIC_PATH, full_iou_thrs, labels_cols\n",
     "from datetime import datetime\n",
+    "\n",
+    "from utils.save import check_best, end_train\n",
+    "from data.load import get_datasets, get_dataloaders\n",
+    "from models.load import get_trained_model\n",
+    "\n",
+    "from IPython.display import clear_output\n",
+    "from utils.eval import get_ar_ap\n",
+    "from utils.train import get_optimiser\n",
+    "from utils.init import reproducibility, clean_memory_get_device\n",
+    "from utils.constants import full_iou_thrs\n",
+    "from data.constants import DEFAULT_REFLACX_LABEL_COLS, XAMI_MIMIC_PATH\n",
+    "\n",
     "\n",
     "## Suppress the assignement warning from pandas.r\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
@@ -99,6 +100,8 @@
     "    # TrainedModels.custom_without_clinical_no_pretrained_final,\n",
     "    TrainedModels.custom_with_clinical_no_pretrained_final,\n",
     "]\n",
+    "\n",
+    "labels_cols = DEFAULT_REFLACX_LABEL_COLS\n",
     "\n",
     "target_epoch = 200\n",
     "\n",
@@ -346,15 +349,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "class TrainedModels(Enum):\n",
-    "    custom_with_clinical_no_pretrained_ar = \"val_ar_0_5220_ap_0_2513_test_ar_0_5590_ap_0_2442_epoch150_WithClincal_04-13-2022 20-13-47_custom_with_clinical_no_pretrained\"\n",
-    "    custom_with_clinical_no_pretrained_ap = \"val_ar_0_4554_ap_0_2582_test_ar_0_5254_ap_0_2405_epoch139_WithClincal_04-13-2022 19-05-08_custom_with_clinical_no_pretrained\"\n",
-    "    custom_with_clinical_no_pretrained_final = \"val_ar_0_4523_ap_0_2251_test_ar_0_5103_ap_0_2464_epoch200_WithClincal_04-14-2022 01-32-28_custom_with_clinical_no_pretrained\"\n",
+    "# class TrainedModels(Enum):\n",
+    "#     custom_with_clinical_no_pretrained_ar = \"val_ar_0_5220_ap_0_2513_test_ar_0_5590_ap_0_2442_epoch150_WithClincal_04-13-2022 20-13-47_custom_with_clinical_no_pretrained\"\n",
+    "#     custom_with_clinical_no_pretrained_ap = \"val_ar_0_4554_ap_0_2582_test_ar_0_5254_ap_0_2405_epoch139_WithClincal_04-13-2022 19-05-08_custom_with_clinical_no_pretrained\"\n",
+    "#     custom_with_clinical_no_pretrained_final = \"val_ar_0_4523_ap_0_2251_test_ar_0_5103_ap_0_2464_epoch200_WithClincal_04-14-2022 01-32-28_custom_with_clinical_no_pretrained\"\n",
     "\n",
-    "    custom_without_clinical_no_pretrained_ar = \"val_ar_0_5645_ap_0_2659_test_ar_0_6263_ap_0_2533_epoch145_WithoutClincal_04-13-2022 08-47-34_custom_without_clinical_no_pretrained\"\n",
-    "    custom_without_clinical_no_pretrained_ap = \"val_ar_0_5512_ap_0_2962_test_ar_0_5999_ap_0_2319_epoch93_WithoutClincal_04-12-2022 09-15-28_custom_without_clinical_no_pretrained\"\n",
-    "    custom_without_clinical_no_pretrained_final = \"val_ar_0_3757_ap_0_1699_test_ar_0_4421_ap_0_1819_epoch200_WithoutClincal_04-13-2022 14-58-52_custom_without_clinical_no_pretrained\""
+    "#     custom_without_clinical_no_pretrained_ar = \"val_ar_0_5645_ap_0_2659_test_ar_0_6263_ap_0_2533_epoch145_WithoutClincal_04-13-2022 08-47-34_custom_without_clinical_no_pretrained\"\n",
+    "#     custom_without_clinical_no_pretrained_ap = \"val_ar_0_5512_ap_0_2962_test_ar_0_5999_ap_0_2319_epoch93_WithoutClincal_04-12-2022 09-15-28_custom_without_clinical_no_pretrained\"\n",
+    "#     custom_without_clinical_no_pretrained_final = \"val_ar_0_3757_ap_0_1699_test_ar_0_4421_ap_0_1819_epoch200_WithoutClincal_04-13-2022 14-58-52_custom_without_clinical_no_pretrained\""
    ]
   },
   {
