--- a/[3] train_loop.ipynb
+++ b/[3] train_loop.ipynb
@@ -388,7 +388,7 @@
     "\n",
     "    train_info = end_train(\n",
     "        train_info=train_info,\n",
-    "        model=model,z\n",
+    "        model=model,\n",
     "        optim=optimizer,\n",
     "        eval_params_dict=eval_params_dict,\n",
     "        last_val_ar=val_ar,\n",
