--- a/[1.a] reflacx_dataset_preprocessing.ipynb
+++ b/[1.a] reflacx_dataset_preprocessing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,23 +28,35 @@
     "from data.paths import TabularDataPaths\n",
     "\n",
     "from utils import print as print_f\n",
-    "from utils.preprocessing import get_split_list"
+    "from utils.preprocessing import get_split_list\n",
+    "from data.constants import XAMI_MIMIC_PATH\n",
+    "\n",
+    "from utils.init import reproducibility"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 0\n",
+    "reproducibility(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Define your MIMIC path here.\n",
-    "XAMI_MIMIC_PATH = \"D:\\XAMI-MIMIC\"\n",
     "XAMI_MIMIC_PATH_str = \"{XAMI_MIMIC_PATH}\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +282,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,26 +383,6 @@
     "            if df[col].isna().any()\n",
     "        ]\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3052"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(reflacx_meta_df)"
    ]
   },
   {
@@ -410,7 +402,7 @@
     }
    ],
    "source": [
-    "2757 + 295"
+    "len(reflacx_meta_df)"
    ]
   },
   {
@@ -902,7 +894,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>train</td>\n",
+       "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1026,7 +1018,7 @@
        "\n",
        "   Lung nodule or mass  Pleural abnormality  Fracture  split  \n",
        "0                  0.0                  0.0       0.0  train  \n",
-       "1                  0.0                  0.0       0.0  train  \n",
+       "1                  0.0                  0.0       0.0   test  \n",
        "2                  0.0                  0.0       0.0  train  \n",
        "3                  1.0                  0.0       0.0  train  \n",
        "4                  0.0                  0.0       0.0  train  \n",
@@ -1045,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1065,7 @@
        "             ('Support devices', 189)])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1172,7 @@
        "             ('Support devices', 169)])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1202,7 @@
        "590"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
