--- a/[1.a] reflacx_dataset_preprocessing.ipynb
+++ b/[1.a] reflacx_dataset_preprocessing.ipynb
@@ -768,7 +768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df['split'] = get_split_list(len(merged_df))"
+    "merged_df['split'] = get_split_list(len(merged_df), train_portion=0.7)"
    ]
   },
   {
@@ -894,7 +894,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>test</td>\n",
+       "      <td>val</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1018,7 +1018,7 @@
        "\n",
        "   Lung nodule or mass  Pleural abnormality  Fracture  split  \n",
        "0                  0.0                  0.0       0.0  train  \n",
-       "1                  0.0                  0.0       0.0   test  \n",
+       "1                  0.0                  0.0       0.0    val  \n",
        "2                  0.0                  0.0       0.0  train  \n",
        "3                  1.0                  0.0       0.0  train  \n",
        "4                  0.0                  0.0       0.0  train  \n",
@@ -1186,23 +1186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "590"
+       "413.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,6 +1203,13 @@
    "source": [
     "len(u_df['Enlarged cardiac silhouette'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1223,7 +1223,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7a402e4e4296f2d4bed1c089fb7c7e828933dcbfe50698b381e393c052eea855"
+   "hash": "52a48fdedee40b77eb251917c5aa239bf02f1ab8c93cc13fe7347f570eadc6b9"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('pytorch')",
