--- a/[5] pred.ipynb
+++ b/[5] pred.ipynb
@@ -32,6 +32,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainedModels(Enum):\n",
+    "\n",
+    "    with_clinical = \"val_ar_0_7430_ap_0_5567_test_ar_0_7974_ap_0_5392_epoch29_WithClincal_05-02-2022 17-07-17_with_clinical\"\n",
+    "\n",
+    "    with_clinical_final = \"val_ar_0_7269_ap_0_4601_test_ar_0_6710_ap_0_4286_epoch100_WithClincal_05-02-2022 19-03-30_with_clinical\"\n",
+    "\n",
+    "    without_clinical = \"val_ar_0_5377_ap_0_2981_test_ar_0_4515_ap_0_2716_epoch30_WithoutClincal_05-02-2022 12-32-56_without_clinical\"\n",
+    "    without_clinical_final = \"val_ar_0_5053_ap_0_2754_test_ar_0_4265_ap_0_2605_epoch100_WithoutClincal_05-02-2022 14-17-08_without_clinical\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -60,17 +76,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TrainedModels(Enum):\n",
+    "# class TrainedModels(Enum):\n",
     "\n",
-    "    # custom_without_clinical_pretrained\n",
-    "    custom_without_clinical_pretrained_ar = \"val_ar_0_5181_ap_0_2127_test_ar_0_5659_ap_0_2037_epoch36_WithoutClincal_04-10-2022 08-07-20_custom_without_clinical_pretrained\"\n",
-    "    custom_without_clinical_pretrained_ap = \"val_ar_0_4635_ap_0_2291_test_ar_0_5178_ap_0_1937_epoch17_WithoutClincal_04-10-2022 07-30-34_custom_without_clinical_pretrained\"\n",
-    "    custom_without_clinical_pretrained_final = \"val_ar_0_4279_ap_0_2052_test_ar_0_4103_ap_0_1757_epoch50_WithoutClincal_04-10-2022 08-34-20_custom_without_clinical_pretrained\"\n",
+    "#     # custom_without_clinical_pretrained\n",
+    "#     custom_without_clinical_pretrained_ar = \"val_ar_0_5181_ap_0_2127_test_ar_0_5659_ap_0_2037_epoch36_WithoutClincal_04-10-2022 08-07-20_custom_without_clinical_pretrained\"\n",
+    "#     custom_without_clinical_pretrained_ap = \"val_ar_0_4635_ap_0_2291_test_ar_0_5178_ap_0_1937_epoch17_WithoutClincal_04-10-2022 07-30-34_custom_without_clinical_pretrained\"\n",
+    "#     custom_without_clinical_pretrained_final = \"val_ar_0_4279_ap_0_2052_test_ar_0_4103_ap_0_1757_epoch50_WithoutClincal_04-10-2022 08-34-20_custom_without_clinical_pretrained\"\n",
     "\n",
-    "    # custom_with_clinical_pretrained\n",
-    "    custom_with_clinical_pretrained_ar = \"val_ar_0_5171_ap_0_2336_test_ar_0_5267_ap_0_1545_epoch39_WithClincal_04-10-2022 10-15-22_custom_with_clinical_pretrained\"\n",
-    "    custom_with_clinical_pretrained_ap = \"val_ar_0_4581_ap_0_2496_test_ar_0_5533_ap_0_1655_epoch49_WithClincal_04-10-2022 10-38-54_custom_with_clinical_pretrained\"\n",
-    "    custom_with_clinical_pretrained_final = \"val_ar_0_3912_ap_0_1756_test_ar_0_5129_ap_0_1736_epoch50_WithClincal_04-10-2022 10-41-48_custom_with_clinical_pretrained\""
+    "#     # custom_with_clinical_pretrained\n",
+    "#     custom_with_clinical_pretrained_ar = \"val_ar_0_5171_ap_0_2336_test_ar_0_5267_ap_0_1545_epoch39_WithClincal_04-10-2022 10-15-22_custom_with_clinical_pretrained\"\n",
+    "#     custom_with_clinical_pretrained_ap = \"val_ar_0_4581_ap_0_2496_test_ar_0_5533_ap_0_1655_epoch49_WithClincal_04-10-2022 10-38-54_custom_with_clinical_pretrained\"\n",
+    "#     custom_with_clinical_pretrained_final = \"val_ar_0_3912_ap_0_1756_test_ar_0_5129_ap_0_1736_epoch50_WithClincal_04-10-2022 10-41-48_custom_with_clinical_pretrained\""
    ]
   },
   {
@@ -737,7 +753,148 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def plot_bbox(\n",
+    "    target: List[Dict],\n",
+    "    pred: List[Dict],\n",
+    "    label_idx_to_disease: Callable[[int], str],\n",
+    "    legend_elements: List[Line2D],\n",
+    "    disease_color_code_map: Dict[str, str],\n",
+    ") -> Figure:\n",
+    "\n",
+    "    fig, (gt_ax, pred_ax) = plt.subplots(1, 2, figsize=(20, 10), dpi=80, sharex=True)\n",
+    "\n",
+    "    fig.suptitle(target[\"image_path\"])\n",
+    "\n",
+    "    fig.legend(handles=legend_elements, loc=\"upper right\")\n",
+    "\n",
+    "    img = PIL.Image.open(target[\"image_path\"]).convert(\"RGB\")\n",
+    "\n",
+    "    gt_ax.imshow(img)\n",
+    "    gt_ax.set_title(f\"Ground Truth ({len(target['boxes'].detach().cpu().numpy())})\")\n",
+    "    pred_ax.imshow(img)\n",
+    "    pred_ax.set_title(f\"Predictions ({len(pred['boxes'].detach().cpu().numpy())})\")\n",
+    "\n",
+    "    # load image\n",
+    "    gt_recs = []\n",
+    "    pred_recs = []\n",
+    "\n",
+    "    for label, bbox, score in zip(\n",
+    "        pred[\"labels\"].detach().cpu().numpy(),\n",
+    "        pred[\"boxes\"].detach().cpu().numpy(),\n",
+    "        pred[\"scores\"].detach().cpu().numpy(),\n",
+    "    ):\n",
+    "        disease = label_idx_to_disease(label)\n",
+    "        c = disease_color_code_map[disease]\n",
+    "        pred_recs.append(\n",
+    "            Rectangle(\n",
+    "                (bbox[0], bbox[1]),\n",
+    "                bbox[2] - bbox[0],\n",
+    "                bbox[3] - bbox[1],\n",
+    "                fill=False,\n",
+    "                color=c,\n",
+    "                linewidth=2,\n",
+    "            )\n",
+    "        )\n",
+    "        pred_ax.text(\n",
+    "            bbox[0],\n",
+    "            bbox[1],\n",
+    "            f\"{disease} ({score:.2f})\",\n",
+    "            color=\"black\",\n",
+    "            backgroundcolor=c,\n",
+    "        )\n",
+    "\n",
+    "    for rec in pred_recs:\n",
+    "        pred_ax.add_patch(rec)\n",
+    "\n",
+    "    for label, bbox in zip(\n",
+    "        target[\"labels\"].detach().cpu().numpy(), target[\"boxes\"].detach().cpu().numpy()\n",
+    "    ):\n",
+    "        disease = label_idx_to_disease(label)\n",
+    "        c = disease_color_code_map[disease]\n",
+    "        gt_recs.append(\n",
+    "            Rectangle(\n",
+    "                (bbox[0], bbox[1]),\n",
+    "                bbox[2] - bbox[0],\n",
+    "                bbox[3] - bbox[1],\n",
+    "                fill=False,\n",
+    "                color=c,\n",
+    "                linewidth=2,\n",
+    "            )\n",
+    "        )\n",
+    "        gt_ax.text(bbox[0], bbox[1], disease, color=\"black\", backgroundcolor=c)\n",
+    "\n",
+    "    for rec in gt_recs:\n",
+    "        gt_ax.add_patch(rec)\n",
+    "\n",
+    "    plt.plot()\n",
+    "    plt.pause(0.01)\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import PIL\n",
+    "from matplotlib.figure import Figure\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "from typing import Callable, Dict, List, Union, Tuple\n",
+    "from matplotlib.lines import Line2D\n",
+    "from matplotlib.patches import Rectangle\n",
+    "from utils.pred import pred_thrs_check\n",
+    "from data.datasets import ReflacxDataset\n",
+    "from utils.plot import plot_bbox, plot_seg\n",
+    "\n",
+    "def plot_result(\n",
+    "    model: nn.Module,\n",
+    "    dataset: ReflacxDataset,\n",
+    "    device: str,\n",
+    "    idx: int,\n",
+    "    legend_elements: List[Line2D],\n",
+    "    disease_cmap=DISEASE_CMAP,\n",
+    "    seg=False,\n",
+    "    seg_thres=0.5,\n",
+    "    score_thres: Dict = None,\n",
+    ") -> Tuple[Figure, Union[Figure, None]]:\n",
+    "    model.eval()\n",
+    "    data = collate_fn([dataset[idx]])\n",
+    "    data = dataset.prepare_input_from_data(data, device)\n",
+    "    target = data[-1]\n",
+    "    pred = model(*data[:-1])\n",
+    "    pred = pred[0]\n",
+    "\n",
+    "    if not score_thres is None:\n",
+    "        pred = pred_thrs_check(pred, dataset, score_thres, device)\n",
+    "\n",
+    "    bb_fig = plot_bbox(\n",
+    "        target[0],\n",
+    "        pred,\n",
+    "        dataset.label_idx_to_disease,\n",
+    "        legend_elements,\n",
+    "        disease_cmap[\"solid\"],\n",
+    "    )\n",
+    "\n",
+    "    seg_fig = None\n",
+    "\n",
+    "    if seg:\n",
+    "        seg_fig = plot_seg(\n",
+    "            target[0],\n",
+    "            pred,\n",
+    "            dataset.label_idx_to_disease,\n",
+    "            legend_elements,\n",
+    "            disease_cmap[\"transparent\"],\n",
+    "            seg_thres=seg_thres,\n",
+    "        )\n",
+    "\n",
+    "    return bb_fig, seg_fig"
+   ]
   }
  ],
  "metadata": {
